tests/toylang/neg/001136_mutation.toylang
program a = { if then a sleep; } .
